vlib/v/checker/tests/string_escape_x_err_a.out
vlib/v/checker/tests/string_escape_x_err_a.vv:2:15: error: `\x` used with no following hex digits
    1 | fn main() {
    2 |     println('\x')
      |               ^
    3 | }
